# mdt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DISCLAIMER.md  README.md  aeronet_sample.csv  environment.yml  gefs_aeronet_stats.md  mkdocs.yml  pyproject.toml  reproduce_issue.py  test_monet_stats_dask.py  visualization_demo.py  visualization_demo_aero.py  visualization_demo_weighted_stats.py  visualization_demo_weighted_v2.py  visualization_demo_weighted_v3.py  zensical.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: developer_guide.md  examples.md  hpc_usage.md  index.md  quick_start.md  user_guide.md  yaml_format.md
docs/examples/: gefs_aeronet.yaml  gefs_aeronet_stats.md  gefs_icap_aeronet_comparison.yaml  gfs_ish_lite.yaml  gfs_ish_stats.md  gfs_ish_wind.yaml  merra2_icap_aeronet_comparison.yaml
ecflow_tasks/: load_ish_lite_obs.ecf  mdt.def
examples/: visualize_results.py  visualize_stats.py
scripts/: __init__.py  apply_monetio_fixes.py  patch_monetio.py  patch_monetio_v2.py  patch_radar.py  patch_scatter.py  patch_timeseries_stats.py
src/mdt/: __init__.py  cli.py  config.py  dag.py  ecflow_engine.py  engine.py  engine_registry.py  hpc.py  utils.py
src/mdt/tasks/: data.py  pairing.py  plotting.py  reductions.py  statistics.py
src/mvs/: __init__.py  cli.py  config.py  dag.py  engine.py  hpc.py
src/mvs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mvs/tasks/: data.py  pairing.py  plotting.py  statistics.py
tests/: test_aero_optimized_stats.py  test_aero_protocol.py  test_aero_reductions_v2.py  test_aero_statistics.py  test_aero_weighted_fallbacks.py  test_aero_weighted_metrics.py  test_aero_weighted_metrics_v2.py  test_cli_orchestrator.py  test_config_orchestrator.py  test_config_region_masking.py  test_config_zarr_store.py  test_dag.py  test_dag_region_masking.py  test_dag_zarr_store.py  test_ecflow_engine.py  test_ecflow_zarr_store.py  test_engine_registry.py  test_examples_validation.py  test_extended_tasks.py  test_gefs_openaq.py  test_gfs_ish_lite_e2e.py  test_load_data_zarr_store.py  test_merra2_icap_aeronet.py  test_pairing_mask.py  test_patch_radar.py  test_patch_scatter.py  test_patch_timeseries_stats.py  test_prefect_lazy_import.py  test_prefect_zarr_store.py  test_profile_plotting.py  test_reductions.py  test_region_masking_plotting.py  test_region_masking_properties.py  test_save_data.py  test_statistics_aero.py  test_statistics_aliases.py  test_tasks.py  test_ufs_airnow.py  test_viirs_aod.py  test_weighted_correlation.py  (+2 more)
