[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdt"
dynamic = ["version"]
description = "Model Development Tool"
authors = [
    {name = "NOAA NWS MDC", email = "example@noaa.gov"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "networkx",
    "xarray",
    "pandas",
    "numpy",
    "monetio @ git+https://github.com/bbakernoaa/monetio.git@develop",
    "monet @ git+https://github.com/bbakernoaa/monet.git@feature/interp_improvements",
    "monet-stats @ git+https://github.com/bbakernoaa/monet-stats@dev",
    "monet-plots @ git+https://github.com/bbakernoaa/monet-plots.git",
]

[project.scripts]
mdt = "mdt.cli:main"

[project.optional-dependencies]
prefect = ["prefect>=2.0.0", "prefect-dask"]
ecflow = ["ecflow"]
dask = ["dask", "dask-jobqueue"]
cubed = ["cubed", "cubed-xarray"]
dev = ["ruff", "pytest", "pytest-mock"]
all = [
    "mdt[prefect]",
    "mdt[ecflow]",
    "mdt[dask]",
    "mdt[cubed]",
    "mdt[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mdt.__version__"}

[tool.semantic_release]
version_toml = []
version_variables = ["src/mdt/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
line-length = 148
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = [
    "D100",  # Missing docstring in public module (we will add them, but good to ignore if we miss one)
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line should be in imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
