[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdt"
dynamic = ["version"]
description = "Model Development Tool"
authors = [
    {name = "NOAA NWS MDC", email = "example@noaa.gov"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "networkx",
    "xarray",
    "pandas",
    "numpy",
    "monetio @ git+https://github.com/bbakernoaa/monetio.git@develop",
    "monet @ git+https://github.com/bbakernoaa/monet.git@feature/interp_improvements",
    "monet-stats @ git+https://github.com/noaa-oar-arl/monet-stats",
    "monet-plots @ git+https://github.com/bbakernoaa/monet-plots.git",
]

[project.scripts]
mdt = "mdt.cli:main"

[project.optional-dependencies]
prefect = ["prefect>=2.0.0", "prefect-dask"]
dask = ["dask", "dask-jobqueue"]
cubed = ["cubed", "cubed-xarray"]
dev = ["ruff", "pytest", "pytest-mock", "hypothesis"]
all = [
    "mdt[prefect]",
    "mdt[dask]",
    "mdt[cubed]",
    "mdt[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mdt.__version__"}

[tool.semantic_release]
version_variables = ["src/mdt/__init__.py:__version__"]
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
template_dir = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
line-length = 148
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "B", "S", "PT", "ARG", "PTH", "RUF"]
ignore = [
    "D100",  # Missing docstring in public module (we will add them, but good to ignore if we miss one)
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line should be in imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert
    "S108",    # Insecure temporary file
    "S110",    # try-except-pass
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG005",  # Unused lambda argument
    "PT019",   # Fixture without value injected as parameter
    "PTH",     # Use Pathlib (we'll allow OS module in tests for now)
    "D102",    # Missing docstring in public method
    "RUF002",  # Ambiguous unicode character
    "RUF015",  # Prefer next(iter())
    "RUF043",  # match= contains metacharacters
    "PT017",   # assertion on exception in except block
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mdt.engine"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "monetio.*",
    "monet.*",
    "monet_stats.*",
    "monet_plots.*",
    "xregrid.*",
    "networkx.*",
    "yaml.*",
    "dask.*",
    "dask_jobqueue.*",
    "prefect.*",
    "prefect_dask.*",
    "ecflow.*",
    "pandas.*",
    "matplotlib.*",
    "cartopy.*",
    "hvplot.*",
    "geoviews.*",
    "holoviews.*",
]
ignore_missing_imports = true
